--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
+
 <html lang="en">
     <head>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-7FN7LEVWXD"></script>
